--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Countdown Timer by Henry Ejemuta</title>
     <style>
         @font-face {
             font-family: 'Morganite';
@@ -44,7 +44,7 @@
 </head>
 
 <body style="user-select: none;-webkit-app-region:drag;">
-    <h1 id="Timer">00:02</h1>
+    <h1 id="Timer">10:00</h1>
     <script>
         function handleKeyPress(event) {
             // You can put code here to handle the keypress.
